--- a/customers/templates/account/password_reset.html
+++ b/customers/templates/account/password_reset.html
@@ -4,9 +4,9 @@
     {% trans "Password Reset" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
+    <h6 class="text-center">
         {% trans "Password Reset" %}
-    {% endelement %}
+    </h6>
     {% if user.is_authenticated %}
         {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
@@ -21,7 +21,7 @@
             {% endelement %}
         {% endslot %}
         {% slot actions %}
-            {% element button type="submit" %}
+            {% element button type="submit" class="btn bg-gradient-primary mb-2 w-100" %}
                 {% trans 'Reset My Password' %}
             {% endelement %}
         {% endslot %}
