--- a/customers/templates/account/password_reset_done.html
+++ b/customers/templates/account/password_reset_done.html
@@ -6,13 +6,17 @@
     {% trans "Password Reset" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
+    <h6 class="text-center">
         {% trans "Password Reset" %}
-    {% endelement %}
+    </h6>
     {% if user.is_authenticated %}
         {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     {% element p %}
         {% blocktrans %}We have sent you an email. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
+    {% endelement %}
+    {% element p %}
+        {% blocktrans %}Get back to{% endblocktrans %}
+        <a href="{% url 'customer_login' %}" class="link-secondary  text-decoration-none" id="show-signup"><b>Login -></b></a>
     {% endelement %}
 {% endblock content %}
