--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -8,7 +8,7 @@
     {% load crispy_forms_tags %}
 
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="stylesheet" href="{% static 'css/singin-signup.css' %}">
+    <link rel="stylesheet" href="{% static 'css/employee_auth.css' %}">
 
     <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet"
@@ -36,7 +36,7 @@
         {% endif %}
 
 
-        <div class="input-group input-group-outline mb-3">
+        <div class="input-group input-group-outline">
             <span class="input-group-text"><i class="bi bi-person"></i></span>
             <input type="text" class="form-control" id="id_username" name="username" placeholder="Username" required>
         </div>
@@ -56,7 +56,7 @@
         {% endif %}
 
 
-        <div class="input-group input-group-outline mb-3">
+        <div class="input-group input-group-outline">
             <span class="input-group-text"><i class="bi bi-envelope"></i></span>
             <input type="email" class="form-control" id="id_email" name="email" placeholder="Email address" required>
         </div>
@@ -76,7 +76,7 @@
         {% endif %}
 
 
-        <div class="input-group input-group-outline mb-3">
+        <div class="input-group input-group-outline">
             <span class="input-group-text"><i class="bi bi-key"></i></span>
             <input type="password" class="form-control" id="id_password1" name="password1" placeholder="Password"
                    required>
@@ -97,7 +97,7 @@
         {% endif %}
 
 
-        <div class="input-group input-group-outline mb-3">
+        <div class="input-group input-group-outline">
             <span class="input-group-text"><i class="bi bi-key"></i></span>
             <input type="password" class="form-control" id="id_password2" name="password2"
                    placeholder="Password confirmation" required>
@@ -118,7 +118,7 @@
         {% endif %}
 
 
-        <div class="input-group input-group-outline mb-3">
+        <div class="input-group input-group-outline">
             <span class="input-group-text"><i class="bi bi-geo-alt"></i></span>
             <select class="form-control" id="{{ form.branch.id_for_label }}" name="branch">
                 {% for branch in form.branch.field.queryset %}
