update allauth email backend, added styles, cleaned js

--- a/customers/templates/account/password_reset_from_key.html
+++ b/customers/templates/account/password_reset_from_key.html
@@ -5,13 +5,13 @@
     {% trans "Change Password" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
+    <h6 class="text-center">
         {% if token_fail %}
             {% trans "Bad Token" %}
         {% else %}
             {% trans "Change Password" %}
         {% endif %}
-    {% endelement %}
+    </h6>
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
         {% element p %}
