--- a/customers/templates/account/password_reset_from_key_done.html
+++ b/customers/templates/account/password_reset_from_key_done.html
@@ -5,10 +5,14 @@
     {% trans "Change Password" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
+    <h6 class="text-center">
         {% trans "Change Password" %}
-    {% endelement %}
+    </h6>
     {% element p %}
         {% trans 'Your password is now changed.' %}
+        <br>
+        {% blocktrans %}Get back to{% endblocktrans %}
+        <a href="{% url 'customer_login' %}" class="link-secondary  text-decoration-none" id="show-signup"><b>Login
+            -></b></a>
     {% endelement %}
 {% endblock content %}
