--- a/customers/templates/account/password_reset.html
+++ b/customers/templates/account/password_reset.html
@@ -29,4 +29,9 @@
     {% element p %}
         {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
     {% endelement %}
+    {% element p %}
+        {% blocktrans %}Get back to{% endblocktrans %}
+        <a href="{% url 'customer_login' %}?form=login" class="link-secondary text-decoration-none" id="show-login"><b>Login
+            -></b></a>
+    {% endelement %}
 {% endblock content %}
