--- a/customers/templates/account/password_reset_from_key_done.html
+++ b/customers/templates/account/password_reset_from_key_done.html
@@ -12,7 +12,7 @@
         {% trans 'Your password is now changed.' %}
         <br>
         {% blocktrans %}Get back to{% endblocktrans %}
-        <a href="{% url 'customer_login' %}" class="link-secondary  text-decoration-none" id="show-signup"><b>Login
+        <a href="{% url 'customer_login' %}?form=login" class="link-secondary text-decoration-none" id="show-login"><b>Login
             -></b></a>
     {% endelement %}
 {% endblock content %}
