--- a/customers/templates/allauth/elements/h1.html
+++ b/customers/templates/allauth/elements/h1.html
@@ -1,1 +1,1 @@
-{% comment %} djlint:off {% endcomment %}{% load allauth %}<h1>{% slot default %}{% endslot %}</h1>
+{% comment %} djlint:off {% endcomment %}{% load allauth %}<h6 class="text-center">{% slot default %}{% endslot %}</h6>
