--- a/customers/templates/account/email_confirm.html
+++ b/customers/templates/account/email_confirm.html
@@ -13,7 +13,9 @@
         {% user_display confirmation.email_address.user as user_display %}
         {% if can_confirm %}
             {% element p %}
-                {% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an email address for user {{ user_display }}.{% endblocktrans %}
+                {% blocktrans with confirmation.email_address.email as email %}Please confirm that
+                    <a href="mailto:{{ email }}">{{ email }}</a> is an email address for user {{ user_display }}.
+                {% endblocktrans %}
             {% endelement %}
             {% url 'account_confirm_email' confirmation.key as action_url %}
             {% element form method="post" action=action_url %}
@@ -27,13 +29,20 @@
             {% endelement %}
         {% else %}
             {% element p %}
-                {% blocktrans %}Unable to confirm {{ email }} because it is already confirmed by a different account.{% endblocktrans %}
+                {% blocktrans %}Unable to confirm {{ email }} because it is already confirmed by a different account.
+                {% endblocktrans %}
             {% endelement %}
         {% endif %}
     {% else %}
         {% url 'account_email' as email_url %}
         {% element p %}
-            {% blocktrans %}This email confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new email confirmation request</a>.{% endblocktrans %}
+            {% blocktrans %}This email confirmation link expired or is invalid. Please
+                <a href="{{ email_url }}">issue a new email confirmation request</a>.{% endblocktrans %}
         {% endelement %}
     {% endif %}
+    {% element p %}
+        {% blocktrans %}Get back to{% endblocktrans %}
+        <a href="{% url 'customer_login' %}?form=login" class="link-secondary text-decoration-none" id="show-login"><b>Login
+            -></b></a>
+    {% endelement %}
 {% endblock content %}
