--- a/customers/templates/account/password_reset_done.html
+++ b/customers/templates/account/password_reset_done.html
@@ -17,6 +17,7 @@
     {% endelement %}
     {% element p %}
         {% blocktrans %}Get back to{% endblocktrans %}
-        <a href="{% url 'customer_login' %}" class="link-secondary  text-decoration-none" id="show-signup"><b>Login -></b></a>
+        <a href="{% url 'customer_login' %}?form=login" class="link-secondary text-decoration-none" id="show-login"><b>Login
+            -></b></a>
     {% endelement %}
 {% endblock content %}
