--- a/customers/templates/account/verification_sent.html
+++ b/customers/templates/account/verification_sent.html
@@ -9,6 +9,13 @@
         {% trans "Verify Your Email Address" %}
     {% endelement %}
     {% element p %}
-        {% blocktrans %}We have sent an email to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification email in your main inbox, check your spam folder. Please contact us if you do not receive the verification email within a few minutes.{% endblocktrans %}
+        {% blocktrans %}We have sent an email to you for verification. Follow the link provided to finalize the signup
+            process. If you do not see the verification email in your main inbox, check your spam folder. Please contact
+            us if you do not receive the verification email within a few minutes.{% endblocktrans %}
+    {% endelement %}
+    {% element p %}
+        {% blocktrans %}Get back to{% endblocktrans %}
+        <a href="{% url 'customer_login' %}?form=login" class="link-secondary text-decoration-none" id="show-login"><b>Login
+            -></b></a>
     {% endelement %}
 {% endblock content %}
