--- a/customers/templates/account/verified_email_required.html
+++ b/customers/templates/account/verified_email_required.html
@@ -11,15 +11,22 @@
     {% url 'account_email' as email_url %}
     {% element p %}
         {% blocktrans %}This part of the site requires us to verify that
-you are who you claim to be. For this purpose, we require that you
-verify ownership of your email address. {% endblocktrans %}
+            you are who you claim to be. For this purpose, we require that you
+            verify ownership of your email address. {% endblocktrans %}
     {% endelement %}
     {% element p %}
         {% blocktrans %}We have sent an email to you for
-verification. Please click on the link inside that email. If you do not see the verification email in your main inbox, check your spam folder. Otherwise
-contact us if you do not receive it within a few minutes.{% endblocktrans %}
+            verification. Please click on the link inside that email. If you do not see the verification email in your
+            main inbox, check your spam folder. Otherwise
+            contact us if you do not receive it within a few minutes.{% endblocktrans %}
     {% endelement %}
     {% element p %}
-        {% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your email address</a>.{% endblocktrans %}
+        {% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your email address</a>.
+        {% endblocktrans %}
+    {% endelement %}
+    {% element p %}
+        {% blocktrans %}Get back to{% endblocktrans %}
+        <a href="{% url 'customer_login' %}?form=login" class="link-secondary text-decoration-none" id="show-login"><b>Login
+            -></b></a>
     {% endelement %}
 {% endblock content %}
