--- a/customers/templates/account/customers_auth.html
+++ b/customers/templates/account/customers_auth.html
@@ -29,10 +29,25 @@
                             {% endfor %}
                         </div>
                     {% endif %}
+{#                    <div class="input-group input-group-outline">#}
+{#                        <span class="input-group-text"><i class="bi bi-person"></i></span>#}
+{#                        <input type="text" name="{{ form_login.login.name }}" class="form-control" id="id_username"#}
+{#                               placeholder="Username" required autocomplete="username">#}
+{#                    </div>#}
+{#                    {% if form_login.login.errors %}#}
+{#                        <div class="text-danger mb-0 text-xxs">#}
+{#                            <ul>#}
+{#                                {% for error in form_login.login.errors %}#}
+{#                                    <li>{{ error }}</li>#}
+{#                                {% endfor %}#}
+{#                            </ul>#}
+{#                        </div>#}
+{#                    {% endif %}#}
+{#                #}
                     <div class="input-group input-group-outline">
-                        <span class="input-group-text"><i class="bi bi-person"></i></span>
-                        <input type="text" name="{{ form_login.login.name }}" class="form-control" id="id_username"
-                               placeholder="Username" required autocomplete="username">
+                        <span class="input-group-text"><i class="bi bi-envelope"></i></span>
+                        <input type="text" name="{{ form_login.login.name }}" class="form-control" id="id_email"
+                               placeholder="Email" required autocomplete="email">
                     </div>
                     {% if form_login.login.errors %}
                         <div class="text-danger mb-0 text-xxs">
@@ -93,26 +108,26 @@
                             {% endfor %}
                         </div>
                     {% endif %}
-                    <div class="input-group input-group-outline">
-                        <span class="input-group-text"><i class="bi bi-person"></i></span>
-                        <input type="text" name="{{ form_signup.username.name }}" class="form-control"
-                               id="id_signup_username"
-                               placeholder="Username" required autocomplete="new-username">
-                    </div>
-                    {% if form_signup.username.errors %}
-                        <div class="text-danger mb-0 text-xxs">
-                            <ul>
-                                {% for error in form_signup.username.errors %}
-                                    <li>{{ error }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    {% endif %}
-                    <div id="help_username" class="text-xxs mt-0 p-0 hidden_text">
-                        <ul>
-                            <li>Required. Letters, digits and @/./+/-/_ only.</li>
-                        </ul>
-                    </div>
+{#                    <div class="input-group input-group-outline">#}
+{#                        <span class="input-group-text"><i class="bi bi-person"></i></span>#}
+{#                        <input type="text" name="{{ form_signup.username.name }}" class="form-control"#}
+{#                               id="id_signup_username"#}
+{#                               placeholder="Username" required autocomplete="new-username">#}
+{#                    </div>#}
+{#                    {% if form_signup.username.errors %}#}
+{#                        <div class="text-danger mb-0 text-xxs">#}
+{#                            <ul>#}
+{#                                {% for error in form_signup.username.errors %}#}
+{#                                    <li>{{ error }}</li>#}
+{#                                {% endfor %}#}
+{#                            </ul>#}
+{#                        </div>#}
+{#                    {% endif %}#}
+{#                    <div id="help_username" class="text-xxs mt-0 p-0 hidden_text">#}
+{#                        <ul>#}
+{#                            <li>Required. Letters, digits and @/./+/-/_ only.</li>#}
+{#                        </ul>#}
+{#                    </div>#}
 
                     <div class="input-group input-group-outline">
                         <span class="input-group-text"><i class="bi bi-envelope"></i></span>
